@startuml

ItemViewController <|- Item
ToDoApplication <|-- ItemViewController

ButtonHandler <|- FileInterface
ButtonHandler <|-- ItemViewController
DisplayCompleteManager <|- ItemViewController

interface FileInterface
{
    void Save(List<Item> list);
    List<Item> Load(File file) throws IOException;
}

class ItemViewController {
    private Button addButton;
    private MenuItem allOption;
    private CheckBox completeCheckbox;
    private MenuItem completeOption;
    private DatePicker datePicker;
    private MenuButton fileButton;
    private Button homeButton;
    private MenuItem deleteSelected;
    private MenuItem incompleteOption;
    private TextField itemTextField;
    private MenuItem loadMenuOption;
    private Button renameButton;
    private MenuItem saveMenuOption;
    private MenuButton displayDropdown;
    private ListView<String> todoItemView;
    void onAddButtonPressed(ActionEvent event)
    void onItemListClicked(MouseEvent event)
    void onCompleteCheckbox(ActionEvent event)
    void onAllOptionSelected(ActionEvent event)
    void onIncompleteOptionSelected(ActionEvent event)
    void onCompleteOptionSelected(ActionEvent event)
    void onDeleteSelectedPressed(ActionEvent event)
    void onDatePickerAction(ActionEvent event)
    void onHomeButtonPressed(ActionEvent event)
    void onLoadPressed(ActionEvent event)
    void onRenameButtonPressed(ActionEvent event)
    void onSavePressed(ActionEvent event)
    private void CreateDialogInputBox()
}

class ToDoApplication
{
    public static void main(String[] args)
    public void start(Stage stage) throws IOException
}

class Item
{
    private String name;
    private LocalDate date;
    private boolean complete;
    public Item(String name)
    public static Item GetItemByString(List<Item> items, String searchString)
    public String getName()
    public LocalDate getDate()
    public boolean getCompleteStatus()
    public void setName(String name)
    public void setDate(LocalDate date)
    public void setComplete(boolean complete)
}

class ButtonHandler
{
    public void Save(List<String> list)
    public List<String> Load(File file)
    public Item AddItemButton(ListView<String> todoItemView, String name)
    public void RenameItem(String currentName, int index, List<Item> items)
}

class DisplayCompleteManager
{
    private static List<Item> completed;
    private static List<Item> incomplete;
    public void ShowCompletedItems(List<Item> masterList, ListView<String> listView)
    public void ShowIncompleteItems(List<Item> masterList, ListView<String> listView)
    public void ShowAllItems(List<Item> masterList, ListView<String> listView)
    private void HideAll(List<Item> masterList, ListView<String> listView)
}

@enduml